--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -39,6 +39,12 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Values", name: "values", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: string},
               {label: "Text", name: "text", widget: "text"}]}
+      - file: "site/content/about/_index.md"
+        label: "About Me"
+        name: "about"
+        fields:
+          - {label: Title, name: title: widget: string}
+          - {label: Body, name: body, widget: markdown}
       - file: "site/content/contact/_index.md"
         label: "Contact Page"
         name: "contact"
