Set publish_mode

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -6,6 +6,9 @@ public_folder: "img"
 
 locale: 'ja'
 
+# [Netlify CMS に「下書き→レビュー中→公開状態」のワークフローを導入する - Qiita](https://qiita.com/Kento75/items/6582be38767ff1ba5eb5)
+publish_mode: editorial_workflow
+
 collections: # A list of collections the CMS should be able to edit
   - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Post" # Used in the UI, ie.: "New Post"
