--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 defaultContentLanguage = "ja"
 languageCode = "ja-jp"
 hasCJKLanguage = true
-title = "My New Netlify Victor Hugo Site"
+title = "Notebook of m-b-t-n"
+
