--- a/site/config.toml
+++ b/site/config.toml
@@ -6,4 +6,5 @@ title = "Notebook of m-b-t-n"
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details: 
 # https://gohugo.io/getting-started/configuration/#toml-configuration
-disableKinds = ["RSS", "taxonomyTerm"]
+disableKinds = ["RSS"]
+
