--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://notebook-of-m-b-t-n.netlify.app/"
+baseurl = "/"
 languageCode = "ja-jp"
 languageLang = "ja"
 title = "Notebook of m-b-t-n"
